--- a/builds/Dockerfile.api
+++ b/builds/Dockerfile.api
@@ -1,4 +1,4 @@
-# Multi-stage build for Consumer
+# Multi-stage build for API Server
 
 # Stage 1: Builder
 FROM golang:1.21-alpine AS builder
@@ -19,7 +19,7 @@ RUN go mod download
 COPY . .
 
 # Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o consumer cmd/consumer/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o api cmd/api/main.go
 
 # Stage 2: Runtime
 FROM alpine:latest
@@ -31,10 +31,17 @@ RUN apk --no-cache add ca-certificates
 WORKDIR /root/
 
 # Copy binary from builder
-COPY --from=builder /app/consumer .
+COPY --from=builder /app/api .
 
 # Copy config directory
 COPY --from=builder /app/config ./config
 
+# Expose port
+EXPOSE 8080
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
+
 # Run the application
-CMD ["./consumer"]
+CMD ["./api"]
